Added chest pinger URL function

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -453,31 +453,30 @@ var GW2T_COLLECTIBLE_DATA = {
 		{n: 66, c: [4466, 16762], i: "OJdXUco"},
 		{n: 67, c: [4532, 16805], i: "omxcCnS"},
 		
-		{n: 68, c: [4202, 16012], t: "Top of this rock in Oasis. Use jump crystal hidden in grass behind the rock to get up there."},
-		{n: 69, c: [5122, 16220], t: "Eastern end of the Restoration Refuge."},
-		{n: 70, c: [5238, 16418], t: "Top of the rock near just south of the Prosperity Waypoint."},
+		{n: 68, c: [5506, 16720], t: "Behind the pulsing vine below the entrance waypoint."},
+		{n: 69, c: [5471, 16287], t: "In the quicksand."},
+		{n: 70, c: [5447, 15928], t: "Back of the mine."},
 		{n: 71, c: [5308, 15924], t: "Northwest corner of Prosperity Mine."},
-		
-		{n: 72, c: [5216, 16314], t: "In the quicksand."},
-		{n: 73, c: [5471, 16287], t: "In the quicksand."},
-		{n: 74, c: [5447, 15928], t: "Back of the mine."},
-		{n: 75, c: [5506, 16720], t: "Behind the pulsing vine below the entrance waypoint."},
-		{n: 76, c: [5267, 16594], t: "Up at the top of the broken sail."},
-		{n: 77, c: [5110, 16744], t: "Top of the ledges."},
-		{n: 78, c: [5131, 16757], t: "Top of the ledges."},
-		{n: 79, c: [4889, 16656], t: "Inside the frog cave."},
-		{n: 80, c: [4904, 16545], t: "The first ledge along from frog cave."},
-		{n: 81, c: [5068, 16459], t: "Inside the Salamader cave."},
-		{n: 82, c: [4931, 16464], t: "Right of the entrance of Cornered instance but on a ledge above. You need jump crystal from across the other side to get there."},
-		{n: 83, c: [5147, 16307], t: "Overlooking the quicksand."},
-		{n: 84, c: [5011, 16361], t: "Inside Explorer’s cave at the back."},
-		{n: 85, c: [5118, 16239], t: "Back of Centaur village"},
-		{n: 86, c: [4938, 16257], t: "Near entrance to Centaur village."},
-		{n: 87, c: [4992, 16280], t: "Near entrance to Centaur village."},
-		{n: 88, c: [4882, 15962], t: "Top of some ledges near the start of the canyon."},
+		{n: 72, c: [5267, 16594], t: "Up at the top of the broken sail."},
+		{n: 73, c: [5238, 16418], t: "Top of the rock near just south of the Prosperity Waypoint."},
+		{n: 74, c: [5216, 16314], t: "In the quicksand."},
+		{n: 75, c: [5147, 16307], t: "Overlooking the quicksand."},
+		{n: 76, c: [5131, 16757], t: "Top of the ledges."},
+		{n: 77, c: [5122, 16220], t: "Eastern end of the Restoration Refuge."},
+		{n: 78, c: [5118, 16239], t: "Back of Centaur village"},
+		{n: 79, c: [5110, 16744], t: "Top of the ledges."},
+		{n: 80, c: [5068, 16459], t: "Inside the Salamader cave."},
+		{n: 81, c: [5011, 16361], t: "Inside Explorer’s cave at the back."},
+		{n: 82, c: [4992, 16280], t: "Near entrance to Centaur village."},
+		{n: 83, c: [4938, 16257], t: "Near entrance to Centaur village."},
+		{n: 84, c: [4931, 16464], t: "Right of the entrance of Cornered instance but on a ledge above. You need jump crystal from across the other side to get there."},
+		{n: 85, c: [4904, 16545], t: "The first ledge along from frog cave."},
+		{n: 86, c: [4889, 16656], t: "Inside the frog cave."},
+		{n: 87, c: [4882, 15962], t: "Top of some ledges near the start of the canyon."},
+		{n: 88, c: [4658, 16371], t: "Near the crash site #2."},
 		{n: 89, c: [4374, 15764], t: "Up near skill point."},
-		{n: 90, c: [3918, 16134], t: "Top of this rock ledge, jump to get there."},
-		{n: 91, c: [4658, 16371], t: "Near the crash site #2."}
+		{n: 90, c: [4202, 16012], t: "Top of this rock in Oasis. Use jump crystal hidden in grass behind the rock to get up there."},
+		{n: 91, c: [3918, 16134], t: "Top of this rock ledge, jump to get there."}
 		]
 	}
 };
