Added Czech Italian Portuguese translations

--- a/index.html
+++ b/index.html
@@ -192,8 +192,10 @@
 					<li><a href="./?enu_Language=de">Deutsch</a></li>
 					<li><a href="./?enu_Language=es">Español</a></li>
 					<li><a href="./?enu_Language=fr">Français</a></li>
-					<li><a href="./?enu_Language=nl">Nederlands</a></li>
+					<li><a href="./?enu_Language=cs">Čeština</a></li>
+					<li><a href="./?enu_Language=it">Italiano</a></li>
 					<li><a href="./?enu_Language=pl">Polski</a></li>
+					<li><a href="./?enu_Language=pt">Português</a></li>
 					<li><a href="./?enu_Language=ru">Русский</a></li>
 					<li><a href="./?enu_Language=zh">中文</a></li>
 					<li><a class="linkExternal" href="http://forum.renaka.com/topic/5529319/"><sub>Help Translate</sub></a></li>
