--- a/mapsrc.html
+++ b/mapsrc.html
@@ -385,98 +385,104 @@ var GW2T_COLLECTIBLE_DATA = {
 		wiki: "http://wiki.guildwars2.com/wiki/Buried_Locked_Chest",
 		credit: "http://www.mattsta.ninja/dry-top/",
 		needles: [
-		{n: 1, c: [5267, 16289], i: "NvmBoaw"},
-		{n: 2, c: [5276, 16256], i: "Xdf8z7Q"},
-		{n: 3, c: [5310, 16186], i: "Bw6OTEN"},
-		{n: 4, c: [5396, 16252], i: "tOMC85i"},
-		{n: 5, c: [5485, 16222], i: "lkcIL2O"},
-		{n: 6, c: [5568, 16118], i: "iGjtfrZ"},
-		{n: 7, c: [5512, 16299], i: "otHDoYQ"},
-		{n: 8, c: [5532, 16381], i: "qrU1XSr"},
-		{n: 9, c: [5468, 16455], i: "RDkCnH8"},
-		{n: 10, c: [5377, 16514], i: "FmIfYPt"},
-		{n: 11, c: [5406, 16592], i: "jxMmbT8"},
-		{n: 12, c: [5331, 16559], i: "ZmFmNNC"},
-		{n: 13, c: [5289, 16626], i: "hDvd7TO"},
-		{n: 14, c: [5333, 16637], i: "x6OI6e9"},
-		{n: 15, c: [5225, 16698], i: "9RjKjjE"},
-		{n: 16, c: [5281, 16762], i: "VzoTuEr"},
-		{n: 17, c: [5257, 16821], i: "QRK0w6C"},
-		{n: 18, c: [5345, 16711], i: "vCiCRf9"},
-		{n: 19, c: [5468, 16721], i: "LLsEubL"},
-		{n: 20, c: [5463, 16654], i: "NcgixZq"},
-		{n: 21, c: [5368, 16625], i: "8cbVhYB"},
-		{n: 22, c: [5407, 16561], i: "YqDBBmg"},
-		{n: 23, c: [5396, 16516], i: "4t18k1J"},
-		{n: 24, c: [5558, 16564], i: "ZTiy9vC"},
-		{n: 25, c: [5535, 16594], i: "1uNpwbe"},
-		{n: 26, c: [5418, 16535], i: "7orCJrj"},
-		{n: 27, c: [5385, 16604], i: "CYIVXAu"},
-		{n: 28, c: [5249, 16508], i: "h33KOBP"},
-		{n: 29, c: [5136, 16392], i: "Lt1Qbg1"},
-		{n: 30, c: [5141, 16560], i: "ngqmZhC"},
-		{n: 31, c: [5168, 16678], i: "p0UhkQh"},
-		{n: 32, c: [5078, 16497], i: "msWUvMm"},
-		{n: 33, c: [5030, 16521], i: "qnN4Ffb"},
-		{n: 34, c: [5088, 16752], i: "tfNh0tH"},
-		{n: 35, c: [4923, 16698], i: "Q78XIcl"},
-		{n: 36, c: [4881, 16616], i: "1ly4eqA"},
-		{n: 37, c: [4976, 16649], i: "7AgAITy"},
-		{n: 38, c: [4952, 16461], i: "6qBQq4n"},
-		{n: 39, c: [5088, 16354], i: "3yebdfp"},
-		{n: 40, c: [4994, 16345], i: "xo2swdc"},
-		{n: 41, c: [5078, 16319], i: "puG7aEE"},
-		{n: 42, c: [4750, 16358], i: "gv6QG81"},
-		{n: 43, c: [4790, 16351], i: "KJbXPAu"},
-		{n: 44, c: [4772, 16173], i: "DEQPh79"},
-		{n: 45, c: [5184, 16047], i: "eNuJ3IH"},
-		{n: 46, c: [5173, 15921], i: "1afdXXg"},
-		{n: 47, c: [5002, 15877], i: "TOuE9B9"},
-		{n: 48, c: [4874, 15781], i: "O3PTbZA"},
-		{n: 49, c: [4782, 15987], i: "pWNi0X1"},
-		{n: 50, c: [4689, 16000], i: "VYmTrbn"},
-		{n: 51, c: [4681, 15860], i: "L28U7ho"},
-		{n: 52, c: [4454, 15972], i: "pO8oTya"},
-		{n: 53, c: [4408, 15889], i: "x6JSg4r"},
-		{n: 54, c: [4406, 15820], i: "iXf51Gf"},
-		{n: 55, c: [4008, 16090], i: "QR1tHUF"},
-		{n: 56, c: [4143, 16113], i: "HUNpmn9"},
-		{n: 57, c: [3939, 16198], i: "8FcA6ev"},
-		{n: 58, c: [4571, 16172], i: "0h4Gr81"},
-		{n: 59, c: [4556, 16333], i: "FrV27hs"},
-		{n: 60, c: [4538, 16392], i: "3y9rJFY"},
-		{n: 61, c: [4430, 16409], i: "RJRJI5n"},
-		{n: 62, c: [4412, 16350], i: "CJ8Imz0"},
-		{n: 63, c: [4319, 16416], i: "9Js0NCw"},
-		{n: 64, c: [4461, 16607], i: "NU3KvWr"},
-		{n: 65, c: [4643, 16583], i: "R1bpzSr"},
-		{n: 66, c: [4466, 16762], i: "OJdXUco"},
-		{n: 67, c: [4532, 16805], i: "omxcCnS"},
+		{n: 1, c: [5197, 16321], i: "7pbSOkM"},
+		{n: 2, c: [5267, 16289], i: "NvmBoaw"},
+		{n: 3, c: [5276, 16256], i: "Xdf8z7Q"},
+		{n: 4, c: [5310, 16186], i: "Bw6OTEN"},
+		{n: 5, c: [5396, 16252], i: "tOMC85i"},
+		{n: 6, c: [5485, 16222], i: "lkcIL2O"},
+		{n: 7, c: [5568, 16118], i: "iGjtfrZ"},
+		{n: 8, c: [5512, 16299], i: "otHDoYQ"},
+		{n: 9, c: [5532, 16381], i: "qrU1XSr"},
+		{n: 10, c: [5468, 16455], i: "RDkCnH8"},
+		{n: 11, c: [5377, 16514], i: "FmIfYPt"},
+		{n: 12, c: [5406, 16592], i: "jxMmbT8"},
+		{n: 13, c: [5331, 16559], i: "ZmFmNNC"},
+		{n: 14, c: [5289, 16626], i: "hDvd7TO"},
+		{n: 15, c: [5254, 16598], i: "0rzLZvl"},
+		{n: 16, c: [5333, 16637], i: "x6OI6e9"},
+		{n: 17, c: [5304, 16643], i: "sh6ugkM"},
+		{n: 18, c: [5225, 16698], i: "9RjKjjE"},
+		{n: 19, c: [5281, 16762], i: "VzoTuEr"},
+		{n: 20, c: [5257, 16821], i: "QRK0w6C"},
+		{n: 21, c: [5388, 16761], i: "uhrpfom"},
+		{n: 22, c: [5345, 16711], i: "vCiCRf9"},
+		{n: 23, c: [5468, 16721], i: "LLsEubL"},
+		{n: 24, c: [5463, 16654], i: "NcgixZq"},
+		{n: 25, c: [5368, 16625], i: "8cbVhYB"},
+		{n: 26, c: [5407, 16561], i: "YqDBBmg"},
+		{n: 27, c: [5396, 16516], i: "4t18k1J"},
+		{n: 28, c: [5521, 16528], i: "XnAXqLR"},
+		{n: 29, c: [5558, 16564], i: "ZTiy9vC"},
+		{n: 30, c: [5535, 16594], i: "1uNpwbe"},
+		{n: 31, c: [5418, 16535], i: "7orCJrj"},
+		{n: 32, c: [5385, 16604], i: "CYIVXAu"},
+		{n: 33, c: [5249, 16508], i: "h33KOBP"},
+		{n: 34, c: [5238, 16418], i: "RFcrFJV"},
+		{n: 35, c: [5136, 16392], i: "Lt1Qbg1"},
+		{n: 36, c: [5141, 16560], i: "ngqmZhC"},
+		{n: 37, c: [5168, 16678], i: "p0UhkQh"},
+		{n: 38, c: [5078, 16497], i: "msWUvMm"},
+		{n: 39, c: [5093, 16488], i: "hxwOtdN"},
+		{n: 40, c: [5030, 16521], i: "qnN4Ffb"},
+		{n: 41, c: [5088, 16752], i: "tfNh0tH"},
+		{n: 42, c: [4923, 16698], i: "Q78XIcl"},
+		{n: 43, c: [4881, 16616], i: "1ly4eqA"},
+		{n: 44, c: [4976, 16649], i: "7AgAITy"},
+		{n: 45, c: [4952, 16461], i: "6qBQq4n"},
+		{n: 46, c: [5088, 16354], i: "3yebdfp"},
+		{n: 47, c: [4994, 16345], i: "xo2swdc"},
+		{n: 48, c: [5078, 16319], i: "puG7aEE"},
+		{n: 49, c: [4750, 16358], i: "gv6QG81"},
+		{n: 50, c: [4790, 16351], i: "KJbXPAu"},
+		{n: 51, c: [4772, 16173], i: "DEQPh79"},
+		{n: 52, c: [4812, 16139], i: "IzK7qZM"},
+		{n: 53, c: [5184, 16047], i: "eNuJ3IH"},
+		{n: 54, c: [5173, 15921], i: "1afdXXg"},
+		{n: 55, c: [5002, 15877], i: "TOuE9B9"},
+		{n: 56, c: [4874, 15781], i: "O3PTbZA"},
+		{n: 57, c: [4782, 15987], i: "pWNi0X1"},
+		{n: 58, c: [4689, 16000], i: "VYmTrbn"},
+		{n: 59, c: [4681, 15860], i: "L28U7ho"},
+		{n: 60, c: [4678, 15785], i: "30wdUDG"},
+		{n: 61, c: [4454, 15972], i: "pO8oTya"},
+		{n: 62, c: [4408, 15889], i: "x6JSg4r"},
+		{n: 63, c: [4406, 15820], i: "iXf51Gf"},
+		{n: 64, c: [4008, 16090], i: "QR1tHUF"},
+		{n: 65, c: [3939, 16198], i: "8FcA6ev"},
+		{n: 66, c: [4219, 16176], i: "qaR0vb3"},
+		{n: 67, c: [4143, 16113], i: "HUNpmn9"},
+		{n: 68, c: [4571, 16172], i: "0h4Gr81"},
+		{n: 69, c: [4556, 16333], i: "FrV27hs"},
+		{n: 70, c: [4538, 16392], i: "3y9rJFY"},
+		{n: 71, c: [4430, 16409], i: "RJRJI5n"},
+		{n: 72, c: [4412, 16350], i: "CJ8Imz0"},
+		{n: 73, c: [4319, 16416], i: "9Js0NCw"},
+		{n: 74, c: [4461, 16607], i: "NU3KvWr"},
+		{n: 75, c: [4643, 16583], i: "R1bpzSr"},
+		{n: 76, c: [4466, 16762], i: "OJdXUco"},
+		{n: 77, c: [4532, 16805], i: "omxcCnS"},
 		
-		{n: 68, c: [5506, 16720], t: "Behind the pulsing vine below the entrance waypoint."},
-		{n: 69, c: [5471, 16287], t: "In the quicksand."},
-		{n: 70, c: [5447, 15928], t: "Back of the mine."},
-		{n: 71, c: [5308, 15924], t: "Northwest corner of Prosperity Mine."},
-		{n: 72, c: [5267, 16594], t: "Up at the top of the broken sail."},
-		{n: 73, c: [5238, 16418], t: "Top of the rock near just south of the Prosperity Waypoint."},
-		{n: 74, c: [5216, 16314], t: "In the quicksand."},
-		{n: 75, c: [5147, 16307], t: "Overlooking the quicksand."},
-		{n: 76, c: [5131, 16757], t: "Top of the ledges."},
-		{n: 77, c: [5122, 16220], t: "Eastern end of the Restoration Refuge."},
-		{n: 78, c: [5118, 16239], t: "Back of Centaur village"},
-		{n: 79, c: [5110, 16744], t: "Top of the ledges."},
-		{n: 80, c: [5068, 16459], t: "Inside the Salamader cave."},
-		{n: 81, c: [5011, 16361], t: "Inside Explorer’s cave at the back."},
-		{n: 82, c: [4992, 16280], t: "Near entrance to Centaur village."},
-		{n: 83, c: [4938, 16257], t: "Near entrance to Centaur village."},
-		{n: 84, c: [4931, 16464], t: "Right of the entrance of Cornered instance but on a ledge above. You need jump crystal from across the other side to get there."},
-		{n: 85, c: [4904, 16545], t: "The first ledge along from frog cave."},
-		{n: 86, c: [4889, 16656], t: "Inside the frog cave."},
-		{n: 87, c: [4882, 15962], t: "Top of some ledges near the start of the canyon."},
-		{n: 88, c: [4658, 16371], t: "Near the crash site #2."},
-		{n: 89, c: [4374, 15764], t: "Up near skill point."},
-		{n: 90, c: [4202, 16012], t: "Top of this rock in Oasis. Use jump crystal hidden in grass behind the rock to get up there."},
-		{n: 91, c: [3918, 16134], t: "Top of this rock ledge, jump to get there."}
+		{n: 78, c: [5506, 16720], t: "Behind the pulsing vine below the entrance waypoint."},
+		{n: 79, c: [5471, 16287], t: "In the quicksand."},
+		{n: 80, c: [5447, 15928], t: "Back of the mine."},
+		{n: 81, c: [5308, 15924], t: "Northwest corner of Prosperity Mine."},
+		{n: 82, c: [5147, 16307], t: "Overlooking the quicksand."},
+		{n: 83, c: [5131, 16757], t: "Top of the ledges."},
+		{n: 84, c: [5122, 16220], t: "Eastern end of the Restoration Refuge."},
+		{n: 85, c: [5118, 16239], t: "Back of Centaur village"},
+		{n: 86, c: [5110, 16744], t: "Top of the ledges."},
+		{n: 87, c: [5011, 16361], t: "Inside Explorer's cave at the back."},
+		{n: 88, c: [4992, 16280], t: "Near entrance to Centaur village."},
+		{n: 89, c: [4938, 16257], t: "Near entrance to Centaur village."},
+		{n: 90, c: [4931, 16464], t: "Right of the entrance of Cornered instance but on a ledge above. You need jump crystal from across the other side to get there."},
+		{n: 91, c: [4904, 16545], t: "The first ledge along from frog cave."},
+		{n: 92, c: [4889, 16656], t: "Inside the frog cave."},
+		{n: 93, c: [4882, 15962], t: "Top of some ledges near the start of the canyon."},
+		{n: 94, c: [4658, 16371], t: "Near the crash site #2."},
+		{n: 95, c: [4374, 15764], t: "Up near skill point."},
+		{n: 96, c: [4202, 16012], t: "Top of this rock in Oasis. Use jump crystal hidden in grass behind the rock to get up there."},
+		{n: 97, c: [3918, 16134], t: "Top of this rock ledge, jump to get there."}
 		]
 	}
 };
@@ -492,8 +498,10 @@ var GW2T_COLLECTIBLE_DATA = {
 	data-de="Karte Zonen"
 	data-es="Zonas del Mapa"
 	data-fr="Carte des Zones"
-	data-nl="Kaart Zonez"
+	data-cs="Mapa Zóny"
+	data-it="Zone di Mappa"
 	data-pl="Mapa Strefy"
+	data-pt="Zonas Mapa"
 	data-ru="Зоны на Карте"
 	data-zh="圖區"
 	>Map Zones</var>
@@ -566,8 +574,10 @@ var GW2T_COLLECTIBLE_DATA = {
 	data-de="Täglich Leistungen"
 	data-es="Logros Diarios"
 	data-fr="Succèses Quotidiennes"
-	data-nl="Dagelijkse Prestaties"
+	data-cs="Denní Úspěchy"
+	data-it="Conquiste Quotidiane"
 	data-pl="Dzienne Osiągnięcia"
+	data-pt="Conquistas Diárias"
 	data-ru="Ежедневные Достижения"
 	data-zh="成就每天"
 	>Daily Achievements</var>
@@ -691,14 +701,16 @@ You may need to complete the heart before you can purchase.
 	data-de="Ressourcen"
 	data-es="Recursos"
 	data-fr="Ressources"
-	data-nl="Hulpbronnen"
+	data-cs="Zdroje"
+	data-it="Risorse"
 	data-pl="Zasobów"
+	data-pt="Recursos"
 	data-ru="Ресурсы"
 	data-zh="資源"
 	>Resource Nodes</var>
 </header>
 <section>
-<div style="width:100%;height:32px"><button id="mapToggle_Resource" class="cssRight">Toggle Icons</button></div>
+<div style="width:100%;height:32px"><button id="mapToggle_Resource" class="cssRight">Toggle All</button></div>
 <div class="mapResourceList">
 	<div id="mapResource_Metal"></div>
 	<div id="mapResource_Plant"></div>
@@ -717,8 +729,10 @@ Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in 
 	data-de="Rätsel Springen"
 	data-es="Rompecabezas Saltos"
 	data-fr="Énigmes Sauts"
-	data-nl="Springt Puzzels"
+	data-cs="Skákání Hlavolam"
+	data-it="Rompicapo Saltando"
 	data-pl="Skoki Zagadki"
+	data-pt="Desafio Pulando"
 	data-ru="Переход Пазлы"
 	data-zh="跳躍謎題"
 	 >Jumping Puzzles</var>
@@ -794,18 +808,20 @@ A marathon of intricate jumps.
 	data-de="Sammlerstücke"
 	data-es="Artículos de Colección"
 	data-fr="Objets de Collection"
-	data-nl="Collectible Items"
+	data-cs="Sběratelské Předměty"
+	data-it="Oggetti da Collezione"
 	data-pl="Kolekcjonowania"
+	data-pt="Itens Colecionáveis"
 	data-ru="Коллекционные"
 	data-zh="珍藏品"
 	>Collectible Items</var>
 </header>
 <section>
-<div style="width:100%;height:32px"><button id="mapToggle_Collectible" class="cssRight">Toggle Icons</button></div>
+<div style="width:100%;height:32px"><button id="mapToggle_Collectible" class="cssRight">Toggle All</button></div>
 <div id="mapCollectibleList"></div>
 <br />
 <p>Many achievements require you to go around the world to collect or interact with scattered or hidden landmarks or items. These are some of them, including the current Living Story ones if available. When in game, hold the Ctrl key to see the item's name appear.</p>
-<p>Every type of collectible is its own checklist. The map markers can be clicked three times to alternate between three ring colors representing an <em>Unfound</em>, <em>Tracked</em>, and <em>Found</em> state. Click Reset for all the rings of that collectible type to be Unfounded again.</p>
+<p>Every type of collectible is its own checklist. The map markers can be clicked three times to alternate between three ring colors representing an <em>Unfound</em>, <em>Tracked</em>, and <em>Found</em> state, and your address bar will be updated with a shareable URL for those marked. Click Reset for all the rings of that collectible type to be Unfounded again.</p>
 <p><strong>Links:</strong> [Y]outube [W]iki [C]redit</p>
 </section>
 
@@ -816,8 +832,10 @@ A marathon of intricate jumps.
 	data-de="Persönliche Checkliste"
 	data-es="Lista Personal"
 	data-fr="Liste Personnelle"
-	data-nl="Persoonlijke Checklist"
+	data-cs="Osobní Seznam"
+	data-it="Elenco Personale"
 	data-pl="Osobista Lista"
+	data-pt="Lista Pessoal"
 	data-ru="Личный Список"
 	data-zh="個人清單"
 	>Personal Checklist</var>
