Unified directory URL redirection

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 				<input id="mapCoordinatesRegion" type="text" />
 			</div>
 			<div id="itemMapLinksNorth" class="itemMapLinks">
-				<a class="linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">news /</a>
-				<a id="linkModeSimple" title="<dfn>Switch to Simple Clock Mode</dfn>" href="./?mode=Simple">simple mode</a>
+				<a class="linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">news</a><span> /</span>
+				<u><a id="linkModeSimple" title="<dfn>Switch to Simple Clock Mode</dfn>" href="./?mode=Simple">simple mode</a></u><span> /</span>
+				<u><a id="linkCollectibleChests" title="<dfn>Dry Top Buried Locked Chests</dfn>" href="./?page=Chests">chests</a></u>
 				<img title="<dfn>Toggle Right Panel</dfn>" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
 			</div>
 			<div id="itemMapLinksSouth" class="itemMapLinks">
