Added Page as Zone name, more chests

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -421,68 +421,69 @@ var GW2T_COLLECTIBLE_DATA = {
 		{n: 34, c: [5238, 16418], i: "RFcrFJV"},
 		{n: 35, c: [5136, 16392], i: "Lt1Qbg1"},
 		{n: 36, c: [5141, 16560], i: "ngqmZhC"},
-		{n: 37, c: [5168, 16678], i: "p0UhkQh"},
-		{n: 38, c: [5078, 16497], i: "msWUvMm"},
-		{n: 39, c: [5093, 16488], i: "hxwOtdN"},
-		{n: 40, c: [5030, 16521], i: "qnN4Ffb"},
-		{n: 41, c: [5088, 16752], i: "tfNh0tH"},
-		{n: 42, c: [4923, 16698], i: "Q78XIcl"},
-		{n: 43, c: [4881, 16616], i: "1ly4eqA"},
-		{n: 44, c: [4976, 16649], i: "7AgAITy"},
-		{n: 45, c: [4952, 16461], i: "6qBQq4n"},
-		{n: 46, c: [5088, 16354], i: "3yebdfp"},
-		{n: 47, c: [4994, 16345], i: "xo2swdc"},
-		{n: 48, c: [5078, 16319], i: "puG7aEE"},
-		{n: 49, c: [4750, 16358], i: "gv6QG81"},
-		{n: 50, c: [4790, 16351], i: "KJbXPAu"},
-		{n: 51, c: [4772, 16173], i: "DEQPh79"},
-		{n: 52, c: [4812, 16139], i: "IzK7qZM"},
-		{n: 53, c: [5184, 16047], i: "eNuJ3IH"},
-		{n: 54, c: [5173, 15921], i: "1afdXXg"},
-		{n: 55, c: [5002, 15877], i: "TOuE9B9"},
-		{n: 56, c: [4874, 15781], i: "O3PTbZA"},
-		{n: 57, c: [4782, 15987], i: "pWNi0X1"},
-		{n: 58, c: [4689, 16000], i: "VYmTrbn"},
-		{n: 59, c: [4681, 15860], i: "L28U7ho"},
-		{n: 60, c: [4678, 15785], i: "30wdUDG"},
-		{n: 61, c: [4454, 15972], i: "pO8oTya"},
-		{n: 62, c: [4408, 15889], i: "x6JSg4r"},
-		{n: 63, c: [4406, 15820], i: "iXf51Gf"},
-		{n: 64, c: [4008, 16090], i: "QR1tHUF"},
-		{n: 65, c: [3939, 16198], i: "8FcA6ev"},
-		{n: 66, c: [4219, 16176], i: "qaR0vb3"},
-		{n: 67, c: [4143, 16113], i: "HUNpmn9"},
-		{n: 68, c: [4571, 16172], i: "0h4Gr81"},
-		{n: 69, c: [4556, 16333], i: "FrV27hs"},
-		{n: 70, c: [4538, 16392], i: "3y9rJFY"},
-		{n: 71, c: [4430, 16409], i: "RJRJI5n"},
-		{n: 72, c: [4412, 16350], i: "CJ8Imz0"},
-		{n: 73, c: [4319, 16416], i: "9Js0NCw"},
-		{n: 74, c: [4461, 16607], i: "NU3KvWr"},
-		{n: 75, c: [4643, 16583], i: "R1bpzSr"},
-		{n: 76, c: [4466, 16762], i: "OJdXUco"},
-		{n: 77, c: [4532, 16805], i: "omxcCnS"},
+		{n: 37, c: [5162, 16621], i: "dDgNvX8"},
+		{n: 38, c: [5168, 16678], i: "p0UhkQh"},
+		{n: 39, c: [5078, 16497], i: "msWUvMm"},
+		{n: 40, c: [5093, 16488], i: "hxwOtdN"},
+		{n: 41, c: [5030, 16521], i: "qnN4Ffb"},
+		{n: 42, c: [5121, 16716], i: "1xvQMyu"},
+		{n: 43, c: [5088, 16752], i: "tfNh0tH"},
+		{n: 44, c: [4923, 16698], i: "Q78XIcl"},
+		{n: 45, c: [4881, 16616], i: "1ly4eqA"},
+		{n: 46, c: [4976, 16649], i: "7AgAITy"},
+		{n: 47, c: [4897, 16538], i: "D75YWKI"},
+		{n: 48, c: [4952, 16461], i: "6qBQq4n"},
+		{n: 49, c: [5088, 16354], i: "3yebdfp"},
+		{n: 50, c: [4994, 16345], i: "xo2swdc"},
+		{n: 51, c: [5078, 16319], i: "puG7aEE"},
+		{n: 52, c: [4750, 16358], i: "gv6QG81"},
+		{n: 53, c: [4790, 16351], i: "KJbXPAu"},
+		{n: 54, c: [4772, 16173], i: "DEQPh79"},
+		{n: 55, c: [4812, 16139], i: "IzK7qZM"},
+		{n: 56, c: [5184, 16047], i: "eNuJ3IH"},
+		{n: 57, c: [5173, 15921], i: "1afdXXg"},
+		{n: 58, c: [5002, 15877], i: "TOuE9B9"},
+		{n: 59, c: [4874, 15781], i: "O3PTbZA"},
+		{n: 60, c: [4782, 15987], i: "pWNi0X1"},
+		{n: 61, c: [4689, 16000], i: "VYmTrbn"},
+		{n: 62, c: [4681, 15860], i: "L28U7ho"},
+		{n: 63, c: [4678, 15785], i: "30wdUDG"},
+		{n: 64, c: [4454, 15972], i: "pO8oTya"},
+		{n: 65, c: [4408, 15889], i: "x6JSg4r"},
+		{n: 66, c: [4406, 15820], i: "iXf51Gf"},
+		{n: 67, c: [4008, 16090], i: "QR1tHUF"},
+		{n: 68, c: [3939, 16198], i: "8FcA6ev"},
+		{n: 69, c: [4219, 16176], i: "qaR0vb3"},
+		{n: 70, c: [4143, 16113], i: "HUNpmn9"},
+		{n: 71, c: [4571, 16172], i: "0h4Gr81"},
+		{n: 72, c: [4556, 16333], i: "FrV27hs"},
+		{n: 73, c: [4538, 16392], i: "3y9rJFY"},
+		{n: 74, c: [4430, 16409], i: "RJRJI5n"},
+		{n: 75, c: [4412, 16350], i: "CJ8Imz0"},
+		{n: 76, c: [4319, 16416], i: "9Js0NCw"},
+		{n: 77, c: [4461, 16607], i: "NU3KvWr"},
+		{n: 78, c: [4643, 16583], i: "R1bpzSr"},
+		{n: 79, c: [4466, 16762], i: "OJdXUco"},
+		{n: 80, c: [4532, 16805], i: "omxcCnS"},
 		
-		{n: 78, c: [5506, 16720], t: "Behind the pulsing vine below the entrance waypoint."},
-		{n: 79, c: [5471, 16287], t: "In the quicksand."},
-		{n: 80, c: [5447, 15928], t: "Back of the mine."},
-		{n: 81, c: [5308, 15924], t: "Northwest corner of Prosperity Mine."},
-		{n: 82, c: [5147, 16307], t: "Overlooking the quicksand."},
-		{n: 83, c: [5131, 16757], t: "Top of the ledges."},
-		{n: 84, c: [5122, 16220], t: "Eastern end of the Restoration Refuge."},
-		{n: 85, c: [5118, 16239], t: "Back of Centaur village"},
-		{n: 86, c: [5121, 16716], t: "Top of the ledges."},
-		{n: 87, c: [5011, 16361], t: "Inside Explorer's cave at the back."},
-		{n: 88, c: [4992, 16280], t: "Near entrance to Centaur village."},
-		{n: 89, c: [4938, 16257], t: "Near entrance to Centaur village."},
-		{n: 90, c: [4931, 16464], t: "Right of the entrance of Cornered instance but on a ledge above. You need jump crystal from across the other side to get there."},
-		{n: 91, c: [4904, 16545], t: "The first ledge along from frog cave."},
-		{n: 92, c: [4889, 16656], t: "Inside the frog cave."},
-		{n: 93, c: [4882, 15962], t: "Top of some ledges near the start of the canyon."},
-		{n: 94, c: [4658, 16371], t: "Near the crash site #2."},
-		{n: 95, c: [4374, 15764], t: "Up near skill point."},
-		{n: 96, c: [4202, 16012], t: "Top of this rock in Oasis. Use jump crystal hidden in grass behind the rock to get up there."},
-		{n: 97, c: [3918, 16134], t: "Top of this rock ledge, jump to get there."}
+		{n: 81, c: [5506, 16720], t: "Behind the pulsing vine below the entrance waypoint."},
+		{n: 82, c: [5471, 16287], t: "In the quicksand."},
+		{n: 83, c: [5447, 15928], t: "Back of the mine."},
+		{n: 84, c: [5308, 15924], t: "Northwest corner of Prosperity Mine."},
+		{n: 85, c: [5147, 16307], t: "Overlooking the quicksand."},
+		{n: 86, c: [5131, 16757], t: "Top of the ledges."},
+		{n: 87, c: [5122, 16220], t: "Eastern end of the Restoration Refuge."},
+		{n: 88, c: [5118, 16239], t: "Back of Centaur village"},
+		{n: 89, c: [5011, 16361], t: "Inside Explorer's cave at the back."},
+		{n: 90, c: [4992, 16280], t: "Near entrance to Centaur village."},
+		{n: 91, c: [4938, 16257], t: "Near entrance to Centaur village."},
+		{n: 92, c: [4931, 16464], t: "Right of the entrance of Cornered instance but on a ledge above. You need jump crystal from across the other side to get there."},
+		{n: 93, c: [4889, 16656], t: "Inside the frog cave."},
+		{n: 94, c: [4882, 15962], t: "Top of some ledges near the start of the canyon."},
+		{n: 95, c: [4658, 16371], t: "Near the crash site #2."},
+		{n: 96, c: [4374, 15764], t: "Up near skill point."},
+		{n: 97, c: [4202, 16012], t: "Top of this rock in Oasis. Use jump crystal hidden in grass behind the rock to get up there."},
+		{n: 98, c: [3918, 16134], t: "Top of this rock ledge, jump to get there."}
 		]
 	}
 };
