--- a/mapsrc.html
+++ b/mapsrc.html
@@ -845,7 +845,7 @@ A marathon of intricate jumps.
 
 <samp class="jsHelpCollapsible"></samp>
 <div><br /><p>You can <strong>disable</strong> a checkbox by double clicking it (for dungeon paths you never do), and you can <strong>re-enable</strong> a checkbox by double clicking the number next to it.</p>
-<p>Money sum is daily path reward (26 silver + bonus chest) and do not count Bag of Coins, loot, etc. Each numbered path gives 40+20 tokens. More on <a href="http://wiki.guildwars2.com/wiki/Dungeon">dungeon rewards</a>.</p>
+<p>Money sum is daily path reward (26 silver + bonus chest) and does not count Bag of Coins, loot, etc. Each numbered path gives 40+20 tokens. More on <a href="http://wiki.guildwars2.com/wiki/Dungeon">dungeon rewards</a>.</p>
 <p>The personal checklist is automatically cleared after server reset, unless set otherwise in the Options.</p>
 </div>
 <div id="chlDungeon">
