--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 				<input id="mapCoordinatesRegion" type="text" />
 			</div>
 			<div id="itemMapLinksNorth" class="itemMapLinks">
-				<a class="linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">news</a><span> /</span>
-				<u><a id="linkModeSimple" title="<dfn>Switch to Simple Clock Mode</dfn>" href="./?mode=Simple">simple mode</a></u><span> /</span>
-				<u><a id="linkCollectibleChests" title="<dfn>Dry Top Buried Locked Chests</dfn>" href="./?page=Chests">chests</a></u>
+				<a class="jsTranslate linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">news</a><span> /</span>
+				<u><a class="jsTranslate" title="<dfn>Switch to Simple Clock Mode</dfn>" href="./?mode=Simple">simple mode</a></u><span> /</span>
+				<u><a class="jsTranslate" title="<dfn>Dry Top Buried Locked Chests</dfn>" href="./?page=Chests">chests</a></u>
 				<img title="<dfn>Toggle Right Panel</dfn>" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
 			</div>
 			<div id="itemMapLinksSouth" class="itemMapLinks">
@@ -237,25 +237,25 @@
 				</div>
 				<header>
 					<img src="img/ui/scheduled.png" alt="Scheduled Bosses" />
-					<span>Scheduled Bosses</span>
+					<span class="jsTranslate">Scheduled Bosses</span>
 					<ins></ins>
 				</header>
 				<div id="listChainsScheduled" class="listChains"></div>
 				<header>
 					<img src="img/event/boss.png" alt="Legacy Bosses" />
-					<span>Legacy Bosses</span>
+					<span class="jsTranslate">Legacy Bosses</span>
 					<ins></ins>
 				</header>
 				<div id="listChainsLegacy" class="listChains"></div>
 				<header>
 					<img src="img/chain/temple.png" alt="Orr Temples" />
-					<span>Orr Temples</span>
+					<span class="jsTranslate">Orr Temples</span>
 					<ins></ins>
 				</header>
 				<div id="listChainsTemple" class="listChains"></div>
 				<header id="headerTimetable">
 					<img src="img/ui/clock.png" alt="Timetable" />
-					<span>Full Timetable</span>
+					<span class="jsTranslate">Full Timetable</span>
 					<ins></ins>
 				</header>
 				<div id="listChainsTimetable" class="listChains"></div>
