--- a/index.html
+++ b/index.html
@@ -293,18 +293,18 @@
 					</div>
 					<br />
 					<h2>Map</h2>
-					<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
-					<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths and event icons</label>
-					<label title="Show/Hide the map area on the left."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
-					<label title="Show/Hide map icons for world completion. Will increase initial site load time if enabled."><input id="opt_bol_showCompletion" type="checkbox" /> Display map completion icons</label>
+					<label style="display:inline-block" title="Show/Hide map icons for world completion. Will increase initial site load time if enabled."><input id="opt_bol_showMappingIcons" type="checkbox" /> Display map completion icons</label>
 					<samp class="jsHelpCollapsible"></samp>
-					<div>
+					<div class="cssIndent">
 						<label><input id="opt_bol_displayWaypoints" type="checkbox" /> Waypoints</label>
 						<label><input id="opt_bol_displayPOIs" type="checkbox" /> POIs</label>
 						<label><input id="opt_bol_displayVistas" type="checkbox" /> Vistas</label>
 						<label><input id="opt_bol_displaySkills" type="checkbox" /> Skill Challenges</label>
 						<label><input id="opt_bol_displayHearts" type="checkbox" /> Renown Hearts</label>
 					</div>
+					<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
+					<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths and event icons</label>
+					<label title="Show/Hide the map area on the left."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
 					<br />
 					<h2>Alarm</h2>
 					<span>Voice announcement requires Chrome, Firefox, or IE9+. Multilingualism is only available for Chrome. Click the speaker icon on the chains page to toggle sound.</span>
