Added sector names, fixed Firefox filters

--- a/helpsrc.html
+++ b/helpsrc.html
@@ -69,7 +69,7 @@
 <a href="http://us.gw2stuff.com/">GW2 Stuff</a> - dependable and helpful timer<br />
 <a href="http://argos-soft.net/GW2">Argos Soft</a> - useful event map<br />
 <a href="http://divinitysreach.com">Divinity's Reach</a> - comprehensive map completioner<br />
-<a href="http://virtus-gilde.de/gw2map">gw2map</a> - promising path maker and viewer<br />
+<a href="http://virtus-gilde.de/gw2map">gw2map</a> - path maker and viewer<br />
 <a href="http://howar31.github.io/GW2Timer/">howar31</a> - clean schedule timer
 </p>
 
