--- a/mapsrc.html
+++ b/mapsrc.html
@@ -648,7 +648,7 @@ Toxic Offshoot events (mostly in Kessex) also has numerous conditions. Use <a hr
 <dl id="mapDailyList_Condition">
 	<dt data-coord="[29781, 12749]">Lowland Burns</dt><dd>Blazeridge noxious branded plants (very high rate of conditions)</dd>
 	<dt data-coord="[6274, 15960]">Vandal's Claim</dt><dd>Brisban bandit mines lots of cripples</dd>
-	<dt data-coord="[11801, 28676]">Desmina's Hallows</dt><dd>Cursed Melandru statues and risen rotmouths</dd>
+	<dt data-coord="[13574, 19584]">Southsun Shoals</dt><dd>Southsun reef drakes confusion and karkas cripple</dd>
 </dl>
 <br />
 
@@ -723,7 +723,13 @@ You may need to complete the heart before you can purchase.
 <div class="mapLegendLine" style="border-bottom: 2px solid lime"></div> <strong>Exact</strong> location of that node<br />
 <div class="mapLegendLine" style="border-bottom: 2px dotted lime"></div> <strong>Approximate</strong> vicinity of that node<br />
 <div class="mapLegendLine" style="border-bottom: 2px dashed lime"></div> <strong>Map</strong> has that resource (not a node)<br />
-Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 1 hour. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki. Click a resource node icon on the map to zoom in/out.<br />
+<samp class="jsHelpCollapsible"></samp>
+<div>
+	T6 nodes on the map are <em>possible</em> and approximate locations, and only 3-4 of them spawn per zone. Other nodes are permanent rich metal veins or plant farms.<br />
+	<br />
+	Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 1 hour. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki. Click a resource node icon on the map to zoom in/out.<br />
+</div>
+<br />
 </section>
 
 
@@ -943,16 +949,16 @@ A marathon of intricate jumps.
 
 
 <header id="headerMap_Notepad" class="jsSection"><img src="img/ui/notepad.png" alt="Notepad" /><var
-	data-de="Notizblock"
-	data-es="Bloc de Notas"
-	data-fr="Bloc-notes"
-	data-cs="Poznámkový blok"
-	data-it="Blocco note"
-	data-pl="Notatnik"
-	data-pt="Bloco de Notas"
-	data-ru="Блокнот"
-	data-zh="記事本"
-	>Notepad</var>
+	data-de="Mein Notizblock"
+	data-es="Mi Bloc de Notas"
+	data-fr="Mon Bloc-notes"
+	data-cs="Můj Poznámkový blok"
+	data-it="Mio Blocco note"
+	data-pl="Mój Notatnik"
+	data-pt="Meu Bloco de Notas"
+	data-ru="Мой Блокнот"
+	data-zh="我的記事本"
+	>My Notepad</var>
 </header>
 <section>
 <div id="chlNotepad">
@@ -961,7 +967,7 @@ A marathon of intricate jumps.
 	</div>
 	<button id="chlNotepadSave">Save</button>
 	<div id="chlNotepadSheets">
-		<textarea>This is your notepad. You can put your game notes here. The buttons above will view that numbered sheet, and clicking any buttons will do a save.</textarea>
+		<textarea>This is your notepad. You can store your game notes here. The buttons above will view that numbered sheet, and clicking any buttons will do a save.</textarea>
 		<textarea>Sheet 2</textarea>
 		<textarea>Sheet 3</textarea>
 		<textarea>Sheet 4</textarea>
@@ -972,7 +978,7 @@ A marathon of intricate jumps.
 		<textarea>Sheet 9</textarea>
 	</div>
 	<br />
-	<button id="chlNotepadRestore" class="cssRight" title="Erases all your notes and restores the default text. Make sure you want to!">Wipe Notepad</button>
+	<button id="chlNotepadRestore" class="cssRight" title="Erase all your notes and restore the default text. Make sure you want to!">Wipe Notepad</button>
 </div>
 </section>
 
